force fixed height for logo div, so that the page doesn't 'jump' every time it loads

--- a/web/static/css/phoenix.css
+++ b/web/static/css/phoenix.css
@@ -28,13 +28,15 @@ form.link, form.button {
 }
 .logo {
   width: 100%;
-  height: 10%;
+  height: 75px;
   display: inline-block;
   margin-bottom: 1em;
+  text-align: center;
 }
 
 .logo object {
   max-width: 100%;
+  height: 100%;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
